--- a/Milestone 02/Module 09/g3-architects-website/index.html
+++ b/Milestone 02/Module 09/g3-architects-website/index.html
@@ -43,8 +43,36 @@
             </div>
         </section>
         <!-- Features Section -->
-        <section>
-        
+        <section class="features display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <!-- Feature Card Container -->
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="dark-03">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Drag & Drop Builder</h4>
+                    <p class="dark-03">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Awesome Modern Design</h4>
+                    <p class="dark-03">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Super Easy to Edit</h4>
+                    <p class="dark-03">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+            </div>
+            <div>
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>            
         </section>
         <!-- Some Facts -->
         <section class="some-facts">
