--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Index</h1>
-    <a href="file:///D:/nafis/Documents/GitHub/ProgrammingHero/Milestones/Milestone%2002/Module%2008/responsive-web-dev-portfolio/index.html." target="_blank">Milestone 02 - Module 08</a>
+    <a href="https://nafisadmankhan.github.io/ProgrammingHero1/Milestone%2002/Module%2008/responsive-web-dev-portfolio/index.html" target="_blank">Milestone 02 - Module 08</a>
 </body>
 </html>
