--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Index</h1>
-    <a href="https://nafisadmankhan.github.io/ProgrammingHero1/Milestone%2002/Module%2008/responsive-web-dev-portfolio/index.html" target="_blank">Milestone 02 - Module 08</a>
+    <h2>Milestone 02</h2>
+    <h3>Module 08</h3>
+    <h4>Project</h4>
+    <a href="https://nafisadmankhan.github.io/ProgrammingHero1/Milestone%2002/Module%2008/responsive-web-dev-portfolio/index.html" target="_blank">Project</a>
 </body>
 </html>
