--- a/milestone-05/module-23/tea-house-resources/index.html
+++ b/milestone-05/module-23/tea-house-resources/index.html
@@ -10,6 +10,130 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <!-- banner section starts here -->
+    <section class="parent_div flex flex-col md:flex-row justify-between items-center min-h-[200px] max-w-[1250px] mx-auto">
+        <div class="left_div">
+            <h1 class="text-[80px] font-bold">
+                It's good <br>
+                tea time at The <br> Tea House
+            </h1>
+            <p class="text-[18px] my-10">
+                Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.
+            </p>
+            <button class="w-[200px] h-[64px] bg-red-500 text-xl text-white rounded-lg bg-gradient-to-r from-[#FF8938] to-[#FF0000]">
+                <span>Explore More</span><span><i class="fa-solid fa-arrow-right -rotate-45"></i></span>
+            </button>
+        </div>
+        <div class="right_div relative">
+            <img src="./images/banner.png" class="relative top-[100px]" alt="">
+            <div class="flex items-center w-[255px] h-[100px] bg-white rounded-lg shadow-md absolute left-[100px]">
+                <span class="text-4xl"><i class="fa-solid fa-star"></i></span>
+                <div class="ml-4">
+                    <p class="text-4xl font-bold">5.00</p>
+                    <p>Trust Pilot Ratings</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- featured section starts here -->
+    <section class="min-h-[200px] max-w-[1250px] mx-auto mt-[100px] text-center">
+        <h1 class="text-5xl">Our Featured Products</h1>
+        <p class="my-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+        <div class="featured_parent min-h-[200px] grid grid-rows-1 md:grid-cols-4 gap-4">
+            <div class="featured_card min-h-[300px] bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] text-center p-4 rounded-lg">
+                <img src="./images/tea-1.png" class="mx-auto block" alt="">
+                <h1 class="text-2xl font-bold">Milk Tea</h1>
+                <p>Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="featured_card min-h-[300px] bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] text-center p-4 rounded-lg">
+                <img src="./images/tea-2.png" class="mx-auto block" alt="">
+                <h1 class="text-2xl font-bold">Black Tea</h1>
+                <p>Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="featured_card min-h-[300px] bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] text-center p-4 rounded-lg">
+                <img src="./images/tea-3.png" class="mx-auto block" alt="">
+                <h1 class="text-2xl font-bold">Lemon Tea</h1>
+                <p>Creamer could be replaced by fresh milk</p>
+            </div>
+            <div class="featured_card min-h-[300px] bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] text-center p-4 rounded-lg">
+                <img src="./images/tea-4.png" class="mx-auto block" alt="">
+                <h1 class="text-2xl font-bold">Green Tea</h1>
+                <p>Creamer could be replaced by fresh milk</p>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- great tea section starts here -->
+    <section class="parent_div flex flex-col md:flex-row gap-4 max-w-[1250px] mx-auto mt-[100px]">
+        <div class="left_div h-full md:w-1/2 grid grid-cols-2 grid-rows-3 gap-4">
+            <div class="bg-gradient-to-r from-[#ff0000] to-[#ff8938] opacity-10 rounded-lg"></div>
+            <div class="row-span-2 bg-[#e6a6231a] flex justify-center items-center rounded-lg">
+                <img src="images/fresh-1.png" alt="">
+            </div>
+            <div class="row-span-2 bg-[#5776391a] flex justify-center items-center rounded-lg">
+                <img src="images/fresh-2.png" alt="">
+            </div>
+            <div class="bg-gradient-to-r from-[#d9d9d9] to-[#ffffff00] rounded-lg"></div>
+        </div>
+        <div class="right_div h-full md:w-1/2">
+            <h1 class="text-5xl font-bold">Great Tea, Freshly Presented</h1>
+            <p class="my-5">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <h2 class="text-xl font-bold">Unique Taste</h2>
+            <p class="my-5">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+            <h2 class="text-xl font-bold">Premium Quality</h2>
+            <p class="mt-5">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        </div>
+    </section>
+
+
+    <!-- meet our clients section starts here -->
+     <section class="parent_div max-w-[1250px] mx-auto mt-[100px] h-[1000px] md:h-[600px] flex gap-4 p-5 bg-gradient-to-r from-[#ff8938] to-[#ff0000] rounded-lg flex-col md:flex-row">
+        <div class="left_div h-full md:w-1/2 text-white flex justify-center items-center">
+            <div>
+                <h1 class="text-5xl font-bold">Meet Our Super <br>Clients</h1>
+                <p class="mt-8 mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                <button class="w-[139px] h-[56px] bg-white text-xl font-bold text-[#ff0000] rounded-lg">Show All</button>
+            </div>
+        </div>
+        <div class="right_div h-full md:w-1/2 relative">
+            <div class="customer_review h-[210px] w-[70vw] md:w-[70%] bg-white p-10 rounded-lg absolute top-[27%] left-[5%] z-10">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h2 class="text-xl font-bold my-5">Ilham Yuda</h2>
+                <div class="absolute -top-[30px] -left-[30px] rounded-full p-1 bg-white">
+                    <img src="./images/client.png" alt="">
+                </div>
+                <img src="./images/circles.png" class="absolute right-4 bottom-4" alt="">
+            </div>
+            <div class="customer_review h-[210px] w-[70vw] md:w-[70%] bg-white p-10 rounded-lg absolute top-[5%] left-[20%] opacity-20">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h2 class="text-xl font-bold my-5">Ilham Yuda</h2>
+                <div class="absolute -top-[30px] -left-[30px] rounded-full p-1 bg-white">
+                    <img src="./images/client.png" alt="">
+                </div>
+            </div>
+            <div class="customer_review h-[210px] w-[70vw] md:w-[70%] bg-white p-10 rounded-lg absolute top-[55%] left-[20%] opacity-20">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h2 class="text-xl font-bold my-5">Ilham Yuda</h2>
+                <div class="absolute -top-[30px] -left-[30px] rounded-full p-1 bg-white">
+                    <img src="./images/client.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- footer section starts here -->
+    <div class="footer_parent border-2 border-red-500 mt-[100px] h-[500px]">
+        <div class="border-2 border-green-500 p-5 flex justify-between items-center">
+            <img src="./images/cup.png" alt="">
+            <div>
+                <p>Ready to get strated?</p>
+                <button class="bg-red-400 p-3">Get Started</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
