--- a/milestone-05/module-23/tea-house-resources/index.html
+++ b/milestone-05/module-23/tea-house-resources/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea House</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- tainwindcss cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- font awesome cdn -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body class="manrope-font">
     <!-- banner section starts here -->
     <section class="parent_div flex flex-col md:flex-row justify-between items-center min-h-[200px] max-w-[1250px] mx-auto">
         <div class="left_div">
@@ -126,14 +127,48 @@
 
 
     <!-- footer section starts here -->
-    <div class="footer_parent border-2 border-red-500 mt-[100px] h-[500px]">
-        <div class="border-2 border-green-500 p-5 flex justify-between items-center">
-            <img src="./images/cup.png" alt="">
-            <div>
-                <p>Ready to get strated?</p>
-                <button class="bg-red-400 p-3">Get Started</button>
+    <section class="bg-[#ffe7e6] py-[50px] mt-[100px]">
+        <div class="footer_parent mt-[100px] max-w-[1250px] mx-auto">
+            <div class="flex justify-between items-center">
+                <img src="./images/cup.png" alt="">
+                <div class="flex items-center">
+                    <p class="mr-5">Ready to get strated?</p>
+                    <button class="text-white font-semibold bg-gradient-to-r from-[#ff8938] to-[#ff0000] p-3 rounded-lg">Get Started</button>
+                </div>
             </div>
+            <div class="flex flex-col items-center text-center md:text-left md:flex-row justify-between mt-[50px]">
+                <div class="">
+                    <h3 class="font-semibold text-lg">Quick Links</h3>
+                    <p class="mt-2">Home</p>
+                    <p class="mt-2">About Us</p>
+                    <p class="mt-2">Insurance</p>
+                    <p class="mt-2">Privacy Policy</p>
+                </div>
+                <div class="">
+                    <h3 class="font-semibold text-lg">Our Service</h3>
+                    <p class="mt-2">Life Insurance</p>
+                    <p class="mt-2">Car Insurance</p>
+                    <p class="mt-2">Health Insurance</p>
+                    <p class="mt-2">House Insurance</p>
+                </div>
+                <div class="">
+                    <h3 class="font-semibold text-lg">Help</h3>
+                    <p class="mt-2">FAQs</p>
+                    <p class="mt-2">Contact Us</p>
+                </div>
+                <div class="">
+                    <h2 class="font-semibold text-xl">Subscribe to our <br>newsletter</h2>
+                    <input type="text" name="" placeholder="Email address" class="border-b-1 outline-none pb-2 mt-5">
+                    <button class="text-white h-[30px] w-[30px] rounded-full bg-gradient-to-r from-[#ff8938] to-[#ff0000]"><i class="fa-solid fa-arrow-right"></i></button>
+                    <div class="mt-5">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </div>
+                </div>
+            </div>
+            <p class="text-center mt-[50px]">© 2027 UIDesign.to - All rights reserved.</p>
         </div>
-    </div>
+    </section>
 </body>
 </html>
