--- a/milestone-06/module-32/Explore-API/index.html
+++ b/milestone-06/module-32/Explore-API/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <button onclick="loadData()">Load Data</button>
+    <button onclick="loadPost()">Load Posts</button>
     <script src="script.js"></script>
 </body>
 </html>
