--- a/milestone-06/module-32/Explore-API/index.html
+++ b/milestone-06/module-32/Explore-API/index.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #post-container{
+            max-width: 1160px;
+            margin: 50px auto;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 20px;
+            row-gap: 30px;
+        }
+        .post-card{
+            border: 1px solid #ddd;
+            padding: 10px;
+            border-radius: 10px;
+            box-shadow: 1px 1px 1px 1px gray;
+            height: 100%;
+        }
+        .post-card p{
+            text-align: justify;
+        }
+    </style>
 </head>
 <body>
     <button onclick="loadData()">Load Data</button>
     <button onclick="loadPost()">Load Posts</button>
-    <script src="script.js"></script>
+    <h1>All Posts</h1>
+
+    <!-- <ul id="post-container"></ul> -->
+    <!-- <ol id="post-container"></ol> -->
+     <div id="post-container">
+        
+     </div>
+
+    <script src="./script.js"></script>
+    <script src="./post.js"></script>
 </body>
 </html>
