--- a/milestone-06/module-32/english-janala-code/index.html
+++ b/milestone-06/module-32/english-janala-code/index.html
@@ -90,12 +90,26 @@
         </div>
     </section>
 
-    <section>
+    <section class="">
         <h2 class="text-4xl font-bold mb-8 text-center">
             <span class="text-sky-400">Let's</span> Learn Vocabulary
         </h2>
         <div id="level-container" class="flex gap-5 flex-wrap justify-center">
         </div>
+    </section>
+
+    <section class="flex justify-center mt-10">
+        <div class="join">
+        <div>
+            <label class="input validator join-item">
+            <input id="input-search" type="text" placeholder="Search Vocabulary Now" required />
+            </label>
+        </div>
+        <button id="btn-search" class="btn btn-primary join-item">Search</button>
+        </div>
+    </section>
+    <section id="spinner" class="flex justify-center items-center py-10 hidden">
+        <span class="loading loading-bars loading-xl"></span>
     </section>
 
     <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5">
@@ -108,11 +122,13 @@
     <!-- Open the modal using ID.showModal() method -->
     <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
     
-    <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+    <dialog id="word_modal" class="modal modal-bottom sm:modal-middle">
     <div class="modal-box">
         <!-- <h3 class="text-lg font-bold">Hello!</h3>
         <p class="py-4">Press ESC key or click the button below to close</p> -->
-        <div></div>
+        <div id="details-container" class="space-y-5">
+            
+        </div>
         <div class="modal-action">
         <form method="dialog">
             <!-- if there is a button in form, it will close the modal -->
